; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_context.c_init_lightmodel.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_context.c_init_lightmodel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gl_lightmodel = type { i8*, i8*, i32 }

@GL_FALSE = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gl_lightmodel*)* @init_lightmodel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_lightmodel(%struct.gl_lightmodel* %0) #0 {
  %2 = alloca %struct.gl_lightmodel*, align 8
  store %struct.gl_lightmodel* %0, %struct.gl_lightmodel** %2, align 8
  %3 = load %struct.gl_lightmodel*, %struct.gl_lightmodel** %2, align 8
  %4 = getelementptr inbounds %struct.gl_lightmodel, %struct.gl_lightmodel* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 8
  %6 = call i32 @ASSIGN_4V(i32 %5, float 0x3FC99999A0000000, float 0x3FC99999A0000000, float 0x3FC99999A0000000, float 1.000000e+00)
  %7 = load i8*, i8** @GL_FALSE, align 8
  %8 = load %struct.gl_lightmodel*, %struct.gl_lightmodel** %2, align 8
  %9 = getelementptr inbounds %struct.gl_lightmodel, %struct.gl_lightmodel* %8, i32 0, i32 1
  store i8* %7, i8** %9, align 8
  %10 = load i8*, i8** @GL_FALSE, align 8
  %11 = load %struct.gl_lightmodel*, %struct.gl_lightmodel** %2, align 8
  %12 = getelementptr inbounds %struct.gl_lightmodel, %struct.gl_lightmodel* %11, i32 0, i32 0
  store i8* %10, i8** %12, align 8
  ret void
}

declare dso_local i32 @ASSIGN_4V(i32, float, float, float, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
